--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   supabase_flutter: ^2.3.3
+  provider: ^6.1.1
+  mpesa_flutter_plugin: ^1.6.1
 
 dev_dependencies:
   flutter_test:
