--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   supabase_flutter: ^2.3.3
   provider: ^6.1.1
   mpesa_flutter_plugin: ^1.6.1
+  shared_preferences: ^2.2.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/van.png
+    - images/profile.png
     - images/available.svg
     - images/disabled.svg
     - images/selected.svg
